--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "express": "^4.16.4",
     "next": "^9.1.6",
+    "next-offline": "^4.0.6",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
   },
